# Project-Stereo

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  DESIGN.md  README.md  SCAN_FIT_REPORT.md  SECURITY.md  UX_BRIEF.md  WORKFLOW.md  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/audit/: page.tsx
components/: BrandVideo.tsx  BrokerSession.tsx  HeroBackgroundVideo.tsx  HeroBackgroundYouTube.tsx  HeroLoginVideo.tsx  HeroVideos.tsx  IntakeForm.tsx  LoginForm.tsx  MemberSummaryView.tsx  PatientIntake.tsx  PlansCatalog.tsx  PublicAnalytics.tsx  PublicHome.tsx  RecommendationTabs.tsx  RecommendationView.tsx  SessionRow.tsx  StartSessionButton.tsx  VerifyBadge.tsx
lib/: version.ts  youtube.ts
reference/rlm-python/: README.md  pyproject.toml
reference/rlm-python/examples/: quickstart.py
reference/rlm-python/rlm/: __init__.py  client.py  parsing.py  prompts.py  repl.py  rlm.py  types.py
reference/rlm-python/server/: app.py  index.html
reference/rlm-python/tests/: test_smoke.py
scripts/: _allow-server-only.cjs  ab-horizon.ts  sim-objectivity.ts  sim-scan-frequency.ts  sim-scan-segments.ts  sim-scan.ts  simulate-health-future.ts  smoke-horizon-latency.ts  test-audit.ts  test-deidentify.ts  test-guardrails.ts  test-health.ts  test-horizon.ts  test-neutrality.ts  test-normalize.ts  test-rules.ts  test-score.ts  test-sim.ts  validate-fixtures.ts  verify-ai-horizons.ts  verify-ai-recommend.ts  verify-clinical-read.ts
(+123 files in other folders)
