[project]
name = "rlm"
version = "0.1.0"
description = "Recursive Language Models (RLM) — from-scratch reimplementation on the Anthropic Claude API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rlm"]
